<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <Button
        android:id="@+id/show_report2_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="-1dp"
        android:text="@string/show_report2_btnPrompt" />

    <Button
        android:id="@+id/export_reportToTxt_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="263dp"
        android:layout_marginEnd="-1dp"
        android:text="@string/exportToTxt_btn_prompt" />

    <Button
        android:id="@+id/delete_reports_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="0dp"
        android:text="@string/delete_reports_btn_prompt" />

    <Button
        android:id="@+id/show_sent_reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="87dp"
        android:text="@string/show_report_btnPrompt" />

    <Button
        android:id="@+id/update_report_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="-2dp"
        android:text="@string/update_reports_btn_prompt" />


    <Button
        android:id="@+id/show_support_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/help_json_prompt" />

    <ScrollView
        android:id="@+id/someTitle_id"
        android:layout_width="410dp"
        android:layout_height="432dp"
        android:layout_below="@+id/show_support_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="251dp">

        <TextView
            android:id="@+id/fetchjsondata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/list_help_support_center"
            android:padding="10dp"
            android:textSize="25sp" />

    </ScrollView>

    <TextView
        android:id="@+id/confirmation_message"
        android:layout_width="394dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="12dp"
        android:text="@string/help_report_confirmation"
        android:textColor="@android:color/holo_green_light" />

    <TextView
        android:id="@+id/tv_locationTeller"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/someTitle_id"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="9dp" />

</RelativeLayout>