<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:text="@string/welcome_prompt_act_start"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/account_create_prompt"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/start_login_button"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="140dp"
        android:background="@color/colorAccent"
        android:text="@string/log_in_prompt"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:adjustViewBounds="true"/>
</RelativeLayout>